--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
+    <h1>Battleship</h1>
+    <div class="game-container">
+        <div class="player-board">
 
+        </div>
+        <div class="computer-board">
+
+        </div>
+    </div>
 </body>
 
 </html>
