--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Battleship</h1>
+    <h3 class="game-message"></h3>
     <div class="game-container">
         <div class="player-board">
 
