refactor game and add styling

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,13 @@
 
 <body>
     <h1>Battleship</h1>
-    <h3 class="game-message"></h3>
     <div class="game-container">
+        <h3 class="game-message"></h3>
         <div class="player-board">
-
+            <h3>Player</h3>
         </div>
         <div class="computer-board">
-
+            <h3>Computer</h3>
         </div>
     </div>
 </body>
