update board names to avoid confusion

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
     <div class="game-container">
         <h3 class="game-message"></h3>
         <div class="player-board">
-            <h3>Player</h3>
+            <h3>Player Board</h3>
         </div>
         <div class="computer-board">
-            <h3>Computer</h3>
+            <h3>Computer Board</h3>
         </div>
     </div>
 </body>
