add game restart feature

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Battleship</h1>
+
     <div class="game-container">
         <h3 class="game-message"></h3>
         <div class="player-board">
@@ -17,7 +18,13 @@
         <div class="computer-board">
             <h3>Computer Board</h3>
         </div>
+
     </div>
+    <div class="overlay-container ">
+        <h3 class="game-result">Welcome aboard! Click to continue and conquer the seas!</h3>
+    </div>
+
+
 </body>
 
 </html>
